--- a/configs/raspberrypi3_wpe_ml_defconfig
+++ b/configs/raspberrypi3_wpe_ml_defconfig
@@ -25,13 +25,18 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/raspberrypi/rpi23-linux-4.9.config"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-3-b-plus bcm2710-rpi-cm3"
+BR2_PACKAGE_LIBEVENT=y
+BR2_PACKAGE_LIBVPX=y
 BR2_PACKAGE_BUSYBOX_SMP=y
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ENCODING=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEORATE=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OPUS=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
