--- a/package/wpe/wpewebkit/Config.in
+++ b/package/wpe/wpewebkit/Config.in
@@ -10,8 +10,14 @@ config BR2_PACKAGE_WPEWEBKIT
 	select BR2_PACKAGE_FONTCONFIG if !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_GLIB_NETWORKING if !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_GST1_PLUGINS_BASE if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_GST1_PLUGINS_BASE if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_GST1_PLUGINS_GOOD if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_GST1_PLUGINS_BAD if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_GST1_PLUGINS_BAD if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_ALSA_LIB if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_ALSA_LIB_MIXER if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_ALSA_LIB_PCM if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
+	select BR2_PACKAGE_ALSA_LIB_SEQ if BR2_PACKAGE_GSTREAMER1 && !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_HARFBUZZ if !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_ICU if !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
 	select BR2_PACKAGE_JPEG if !BR2_PACKAGE_WPEWEBKIT_ONLY_JSC
