--- a/configs/acn2952_wpe_yt_defconfig
+++ b/configs/acn2952_wpe_yt_defconfig
@@ -20,6 +20,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/acn/acn.sh"
 BR2_PACKAGE_BUSYBOX_SMP=y
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GST1_BCM=y
+# BR2_PACKAGE_GST1_BCM_VP9_SUPPORT is not set
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
