--- a/configs/acn2952_wpe_yt_defconfig
+++ b/configs/acn2952_wpe_yt_defconfig
@@ -74,7 +74,7 @@ BR2_PACKAGE_WPEFRAMEWORK_WEBSHELL=y
 BR2_PACKAGE_WPEFRAMEWORK_DIALSERVER=y
 BR2_PACKAGE_WPEWEBKIT=y
 BR2_PACKAGE_WPEWEBKIT_ENABLE_NATIVE_AUDIO=y
-BR2_PACKAGE_LIBXKBCOMMON=y
+# BR2_PACKAGE_LIBXKBCOMMON is not set
 BR2_PACKAGE_C_ARES=y
 BR2_PACKAGE_ORC=y
 BR2_PACKAGE_ICU_USE_ICUDATA=y
