--- a/configs/synaptics64_kernel_defconfig
+++ b/configs/synaptics64_kernel_defconfig
@@ -14,7 +14,6 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git@github.com:Metrological/marvell-linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="4.1.43"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/synaptics/linux-4.1-defconfig"
+BR2_LINUX_KERNEL_DEFCONFIG="berlin4cdp_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="marvell/berlin4cdp-a0-stb-tz"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="marvell/berlin4cdp-a0-stb-2g-tz marvell/berlin4cdp-a0-stb-2g-tz-factory marvell/berlin4cdp-a0-stb-2g-tz-recovery"
