--- a/board/raspberrypi/rpi23-linux-4.9.config
+++ b/board/raspberrypi/rpi23-linux-4.9.config
@@ -195,7 +195,13 @@ CONFIG_REGULATOR=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_DEV=y
+CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEO_BCM2835=y
+CONFIG_MEDIA_USB_SUPPORT=y
+CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_BCM2708=y
