--- a/package/synaptics/Config.in
+++ b/package/synaptics/Config.in
@@ -8,6 +8,7 @@ config BR2_PACKAGE_PROVIDES_BERLIN
 source "package/synaptics/marvell-firmware/Config.in"
 source "package/synaptics/marvell-ampsdk/Config.in"
 source "package/synaptics/gst1-syna-playersinkbin/Config.in"
+source "package/synaptics/gst1-syna-videosink/Config.in"
 source "package/synaptics/gst1-syna-plugin/Config.in"
 source "package/synaptics/gst1-syna-plugin-webkit/Config.in"
 source "package/synaptics/gst1-syna-plugin-ut/Config.in"
