--- a/configs/raspberrypi3_wpe_ml_defconfig
+++ b/configs/raspberrypi3_wpe_ml_defconfig
@@ -14,7 +14,6 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi3/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi3/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="--add-pi3-miniuart-bt-overlay --rpi-wifi --i2c --spi --1w --tvmode-720 --overclock-pi3 --silent"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/raspberrypi/linux.git"
@@ -24,31 +23,99 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/raspberrypi/rpi23-linux-4.9.config"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-3-b-plus bcm2710-rpi-cm3"
+BR2_PACKAGE_ALSA_LIB_ALISP=y
+BR2_PACKAGE_ALSA_LIB_ALOAD=y
+BR2_PACKAGE_ALSA_LIB_CTL_PLUGINS="all"
+BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev/snd"
+BR2_PACKAGE_ALSA_LIB_HWDEP=y
+BR2_PACKAGE_ALSA_LIB_MIXER=y
+BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS=y
+BR2_PACKAGE_ALSA_LIB_PCM_PLUGINS="all"
+BR2_PACKAGE_ALSA_LIB_PCM=y
+BR2_PACKAGE_ALSA_LIB_RAWMIDI=y
+BR2_PACKAGE_ALSA_LIB_SEQ=y
+BR2_PACKAGE_ALSA_LIB=y
+BR2_PACKAGE_AUDIT_ARCH_SUPPORTS=y
 BR2_PACKAGE_BUSYBOX_SMP=y
+BR2_PACKAGE_BUSYBOX=y
+BR2_PACKAGE_CAIRO_PNG=y
+BR2_PACKAGE_CAIRO=y
+BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
+BR2_PACKAGE_C_ARES=y
+BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
+BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
+BR2_PACKAGE_DROPBEAR_CLIENT=y
+BR2_PACKAGE_DROPBEAR_SMALL=y
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
+BR2_PACKAGE_EFIVAR_ARCH_SUPPORTS=y
+BR2_PACKAGE_ERLANG_ARCH_SUPPORTS=y
+BR2_PACKAGE_EUDEV=y
+BR2_PACKAGE_EXPAT=y
+BR2_PACKAGE_FAAD2=y
+BR2_PACKAGE_FDK_AAC_ARCH_SUPPORTS=y
+BR2_PACKAGE_FFMPEG_ARCH_SUPPORTS=y
+BR2_PACKAGE_FONTCONFIG=y
+BR2_PACKAGE_FREETYPE=y
+BR2_PACKAGE_GAUCHE_ARCH_SUPPORTS=y
+BR2_PACKAGE_GDB_DEBUGGER=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GESFTPSERVER=y
+BR2_PACKAGE_GLIBC=y
+BR2_PACKAGE_GLIB_NETWORKING=y
+BR2_PACKAGE_GMP=y
+BR2_PACKAGE_GNUTLS=y
+BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
+BR2_PACKAGE_GRAPHITE2=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_HAS_LIB_OPENGL=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_DISPMANX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_EGL=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_GLES2=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_HAS_API=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_HAS_PLATFORM=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL_HAS_WINDOW=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_LIB_OPENGL=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DASH=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FAAD=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_GL=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HLS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTHSTREAMING=y
 BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOCONVERT=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORESAMPLE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ENCODING=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OPUS=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_PLAYBACK=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TYPEFIND=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOSCALE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOTESTSRC=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VOLUME=y
+BR2_PACKAGE_GST1_PLUGINS_BASE=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AVI=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEINTERLACE=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ICYDEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ID3DEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_INTERLEAVE=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ISOMP4=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MATROSKA=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_PULSE=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2_PROBE=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPARSE=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPG123=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 BR2_PACKAGE_GST_OMX=y
@@ -60,12 +127,135 @@ BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
 BR2_PACKAGE_GSTREAMER1=y
+BR2_PACKAGE_GSTREAMER1_GST_DEBUG=y
+BR2_PACKAGE_GSTREAMER1_INSTALL_TOOLS=y
+BR2_PACKAGE_GSTREAMER1_PARSE=y
+BR2_PACKAGE_GSTREAMER1_PLUGIN_REGISTRY=y
+BR2_PACKAGE_GSTREAMER1_TRACE=y
+BR2_PACKAGE_HARFBUZZ=y
+BR2_PACKAGE_HAS_JPEG=y
+BR2_PACKAGE_HAS_LIBEGL=y
+BR2_PACKAGE_HAS_LIBGLES=y
+BR2_PACKAGE_HAS_LIBOPENMAX=y
+BR2_PACKAGE_HAS_LIBOPENVG=y
+BR2_PACKAGE_HAS_PLAYREADY=y
+BR2_PACKAGE_HAS_UDEV=y
+BR2_PACKAGE_HOST_GO_ARCH_SUPPORTS=y
+BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
+BR2_PACKAGE_HOST_RUSTC_ARCH_SUPPORTS=y
+BR2_PACKAGE_HOST_TI_CGT_PRU_ARCH_SUPPORTS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_ICUDATA=y
+BR2_PACKAGE_ICU=y
+BR2_PACKAGE_INITSCRIPTS=y
+BR2_PACKAGE_IPTABLES=y
+BR2_PACKAGE_IW=y
+BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
+BR2_PACKAGE_JPEG_SIMD_SUPPORT=y
+BR2_PACKAGE_JPEG_TURBO=y
+BR2_PACKAGE_JPEG=y
+BR2_PACKAGE_JSON_C=y
+BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
+BR2_PACKAGE_KODI_EGL_GLES=y
+BR2_PACKAGE_LIBAIO_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBATOMIC_OPS_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBCURL=y
+BR2_PACKAGE_LIBEPOXY=y
+BR2_PACKAGE_LIBEVDEV=y
+BR2_PACKAGE_LIBEVENT=y
+BR2_PACKAGE_LIBFFI=y
+BR2_PACKAGE_LIBGCRYPT=y
+BR2_PACKAGE_LIBGLIB2=y
+BR2_PACKAGE_LIBGPG_ERROR_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
+BR2_PACKAGE_LIBGPG_ERROR=y
+BR2_PACKAGE_LIBINPUT=y
+BR2_PACKAGE_LIBMNG=y
+BR2_PACKAGE_LIBNL=y
+BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
+BR2_PACKAGE_LIBOGG=y
+BR2_PACKAGE_LIBOPENH264_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBPNG=y
+BR2_PACKAGE_LIBSIGSEGV_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBSNDFILE=y
+BR2_PACKAGE_LIBSOUP_SSL=y
+BR2_PACKAGE_LIBSOUP=y
+BR2_PACKAGE_LIBTASN1=y
+BR2_PACKAGE_LIBTIRPC=y
+BR2_PACKAGE_LIBTOOL=y
+BR2_PACKAGE_LIBUNISTRING=y
+BR2_PACKAGE_LIBUNWIND_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBURCU_ARCH_SUPPORTS=y
+BR2_PACKAGE_LIBVPX=y
+BR2_PACKAGE_LIBXKBCOMMON=y
+BR2_PACKAGE_LIBXML2=y
+BR2_PACKAGE_LIBXSLT=y
+BR2_PACKAGE_LINUX_HEADERS=y
+BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
+BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
+BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
+BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
+BR2_PACKAGE_MPG123=y
+BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
+BR2_PACKAGE_MTDEV=y
+BR2_PACKAGE_NCURSES=y
+BR2_PACKAGE_NETFLIX_KEYMAP=""
+BR2_PACKAGE_NETFLIX_LIB=y
+BR2_PACKAGE_NETFLIX=y
+BR2_PACKAGE_NETTLE=y
+BR2_PACKAGE_NODEJS_ARCH_SUPPORTS=y
+BR2_PACKAGE_OPENAL_ARCH_SUPPORTS=y
+BR2_PACKAGE_OPENBLAS_ARCH_SUPPORTS=y
+BR2_PACKAGE_OPENBLAS_DEFAULT_TARGET="ARMV7"
+BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
+BR2_PACKAGE_OPUS=y
+BR2_PACKAGE_OVERRIDE_FILE="$(CONFIG_DIR)/local.mk"
+BR2_PACKAGE_PCRE_UCP=y
+BR2_PACKAGE_PCRE_UTF=y
+BR2_PACKAGE_PCRE=y
+BR2_PACKAGE_PIXMAN=y
+BR2_PACKAGE_POPT=y
+BR2_PACKAGE_PPPD=y
+BR2_PACKAGE_PROTOBUF_ARCH_SUPPORTS=y
+BR2_PACKAGE_PROVIDES_JPEG="jpeg-turbo"
+BR2_PACKAGE_PROVIDES_LIBEGL="rpi-userland"
+BR2_PACKAGE_PROVIDES_LIBGLES="rpi-userland"
+BR2_PACKAGE_PROVIDES_LIBOPENMAX="rpi-userland"
+BR2_PACKAGE_PROVIDES_LIBOPENVG="rpi-userland"
+BR2_PACKAGE_PROVIDES_UDEV="eudev"
+BR2_PACKAGE_PULSEAUDIO_DAEMON=y
+BR2_PACKAGE_PULSEAUDIO=y
+BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
+BR2_PACKAGE_QT5_GL_AVAILABLE=y
+BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
+BR2_PACKAGE_RPCBIND=y
 BR2_PACKAGE_RPI_BT_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_WPEFRAMEWORK=y
 BR2_PACKAGE_WPEFRAMEWORK_VIRTUALINPUT=y
 BR2_PACKAGE_WPEFRAMEWORK_PROVISIONPROXY=y
+BR2_PACKAGE_RSYNC=y
+BR2_PACKAGE_SKELETON=y
+BR2_PACKAGE_SPEEX_ARM5E=y
+BR2_PACKAGE_SPEEX=y
+BR2_PACKAGE_SQLITE=y
+BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
+BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
+BR2_PACKAGE_TZDATA_ZONELIST=""
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
+BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
+BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
+BR2_PACKAGE_UTIL_LINUX=y
+BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
+BR2_PACKAGE_WEBP_DEMUX=y
+BR2_PACKAGE_WEBP=y
+BR2_PACKAGE_WEBRTC_AUDIO_PROCESSING_ARCH_SUPPORTS=y
+BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
+# BR2_PACKAGE_WPEFRAMEWORK_COMMANDER is not set
 BR2_PACKAGE_WPEFRAMEWORK_DHCPSERVER=y
 BR2_PACKAGE_WPEFRAMEWORK_DIALSERVER=y
 BR2_PACKAGE_WPEFRAMEWORK_LOCATIONSYNC=y
@@ -102,5 +292,21 @@ BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_WPEWEBKIT_ENABLE_MEDIA_SOURCE=y
+BR2_PACKAGE_WPEWEBKIT_ENABLE_NATIVE_VIDEO=y
+BR2_PACKAGE_WPEWEBKIT_ENABLE_TEXT_SINK=y
+BR2_PACKAGE_WPEWEBKIT_RELEASE=y
+BR2_PACKAGE_WPEWEBKIT_USE_ENCRYPTED_MEDIA=y
+BR2_PACKAGE_WPEWEBKIT_USE_GSTREAMER_GL=y
+BR2_PACKAGE_WPEWEBKIT_USE_GSTREAMER_WEBKIT_HTTP_SRC=y
+BR2_PACKAGE_WPEWEBKIT_USE_PUNCH_HOLE_NONE=y
+BR2_PACKAGE_WPEWEBKIT_USE_WEB_AUDIO=y
+BR2_PACKAGE_XENOMAI_ARCH_SUPPORTS=y
+BR2_PACKAGE_XKEYBOARD_CONFIG=y
+BR2_PACKAGE_XUTIL_UTIL_MACROS=y
+BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
+BR2_PACKAGE_ZLIB=y
+BR2_PRIMARY_SITE=""
+BR2_SYSTEM_DHCP="eth0"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
