--- a/board/raspberrypi/rpi23-linux-4.9.config
+++ b/board/raspberrypi/rpi23-linux-4.9.config
@@ -218,6 +218,7 @@ CONFIG_SND=y
 # CONFIG_SND_VERBOSE_PROCFS is not set
 CONFIG_SND_BCM2835=y
 # CONFIG_SND_SPI is not set
+CONFIG_SND_USB_AUDIO=m
 CONFIG_HID_MULTITOUCH=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
