--- a/configs/raspberrypi3_wpe_ml_defconfig
+++ b/configs/raspberrypi3_wpe_ml_defconfig
@@ -25,12 +25,21 @@ BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-3-b-plus bcm2710-rpi-cm3"
 BR2_PACKAGE_BUSYBOX_SMP=y
-BR2_PACKAGE_GSTREAMER1=y
+BR2_PACKAGE_DROPBEAR=y
+# BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
+BR2_PACKAGE_GESFTPSERVER=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DASH=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FAAD=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HLS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTHSTREAMING=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OPUS=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
@@ -40,15 +49,8 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_ID3DEMUX=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_INTERLEAVE=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MATROSKA=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_VIDEOPARSERS=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DASH=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_FAAD=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_HLS=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS=y
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTHSTREAMING=y
-BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPG123=y
+BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 BR2_PACKAGE_GST_OMX=y
 BR2_PACKAGE_NINJA=y
 BR2_PACKAGE_PLAYREADY=y
@@ -57,13 +59,15 @@ BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_RPI_BT_FIRMWARE=y
-# BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
+BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_WPEFRAMEWORK=y
 BR2_PACKAGE_WPEFRAMEWORK_VIRTUALINPUT=y
 BR2_PACKAGE_WPEFRAMEWORK_PROVISIONPROXY=y
 BR2_PACKAGE_WPEFRAMEWORK_DHCPSERVER=y
+BR2_PACKAGE_WPEFRAMEWORK_DIALSERVER=y
 BR2_PACKAGE_WPEFRAMEWORK_LOCATIONSYNC=y
 BR2_PACKAGE_WPEFRAMEWORK_LOCATIONSYNC_URI="http://jsonip.metrological.com/?maf=true"
 BR2_PACKAGE_WPEFRAMEWORK_MONITOR=y
@@ -98,3 +102,5 @@ BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
